# trading-bot

./: .cursorrules  .env.example  .gitignore  .gitignore.dry-run  .pre-commit-config.yaml  .pre-commit-hooks-setup.md  CLAUDE.md  FOUNDATION_STRATEGY_FIX_PLAN.md  GEMINI.md  PHASE0_TODO.md  PHASE1_QUICK_STATUS.md  PHASE1_STATUS_ANALYSIS.md  PHASE1_TODO.md  PHASE1_VALIDATION_REPORT.md  PHASE2.5_INTEGRATION_SUCCESS.md  PHASE2.5_TODO.md  PHASE2_INTEGRATION_SUCCESS.md  PHASE2_QUALITY_CHECK_REPORT.md  PHASE2_TODO.md  PHASE3_COMPLETION_REPORT.md  PHASE3_FINAL_SUMMARY.md  PHASE3_PROGRESS_REPORT.md  PHASE3_TODO.md  PHASE4_COMPLETION_REPORT.md  PHASE4_IMPLEMENTATION.md  PHASE4_QUICK_REFERENCE.md  PHASE4_TODOLIST.md  PHASE5_TODO.md  PHASE_STATUS_VERIFICATION.md  README.md  env.example  phase_2_5_3_todo.md  pyproject.toml  pytest.ini  verify_automation.py
.claude/: README.md
.claude/commands/: analyze.md  backtest.md  claude.md  commit.md  coverage.md  docs.md  dry-run.md  logs.md  migrate.md  new.md  quality.md  rules.md  spec.md  status.md  tdd.md  test.md  workflow.md
alembic/: env.py
alembic/versions/: 04389f39116e_create_trading_accounts_table.py  0b9ebafd26aa_change_ticket_to_bigint_for_large_mt5_.py  0bf7b67bd264_enhance_zones_table_add_session_id_and_.py  5634fb9b8af9_enhance_positions_table_add_28_fields.py  a1b2c3d4e5f6_drop_redundant_position_fields.py  a2192c549d7b_initial_migration_create_all_tables.py  b7f3a9c1d2e4_create_signal_rejections_table.py  bb51ca8acdf0_add_confluence_score_and_ticket_to_.py  c7944eb8482a_add_account_id_to_positions.py  cc753a52971c_create_config_snapshots_table.py  d50050150705_create_trading_accounts_table.py  d9c52db8d46c_create_trading_sessions_table.py  f5ee315d1247_create_positions_table.py
apps/dashboard/: .env.local.example  .gitignore  package-lock.json  package.json
config/: active_symbols.yaml  backtest_after_fixes.yaml  backtest_before_fixes.yaml  default.yaml  development.yaml  production.yaml  strategy_parameters.yaml  symbol_mapping.yaml  test.yaml  trading_config.yaml  trading_types.yaml
docs/: README.md  advanced-analytics-implementation.md  architecture-guide.md  asset-configuration-guide.md  broker-symbol-mapping-guide.md  cli-reference.md  code-examples.md  configuration-guide.md  dashboard-features-specification.md  dashboard-technical-architecture.md  database-erd.md  dry-run-modes.md  end-to-end-trading-flow.md  environment-setup-guide.md  fastapi-backend-integration.md  frontend-mvp-plan.md  implementation-plan-trading-types.md  index.md  integration-gap-analysis.md  market-hours-guide.md  mt5-connection-guide.md  multi-timeframe-trading-types-guide.md  nextjs-frontend-architecture.md  notifications-guide.md  pgadmin4-setup-guide.md  phase6-web-dashboard-guide.md  pip-calculation-guide.md  position-management-architecture.md  postgresql-migration-guide.md  postgresql-migration-quick-reference.md  postgresql-migration-todo.md  repository-pattern-guide.md  risk-management-guide.md  risk-notification-integration-testing.md  strategy-implementation-guide.md  tailwind-css-styling-system.md  technical-indicators-guide.md  technical-indicators-installation-guide.md  testing-coverage-gaps.md  timeframe-analysis-guide.md  (+4 more)
docs/analysis/: breakeven_trailing_configuration_review.md  rsi_overbought_issue_usdjpy.md  usdjpy_breakeven_trailing_issue.md
docs/architecture/: architecture-guide.md  database-erd.md  trading-type-architecture.md
docs/audit/: intraday-strategy-audit.md
docs/bugfix/: xagusd-pip-value-bug.md  zone-based-sl-implementation.md
docs/diagrams/: account-management-flow.mermaid  database-erd.md  database-erd.mermaid  integration-architecture.mermaid  multi-timeframe-flow.mermaid  open-position-flow.mermaid  position-management-flow.mermaid  risk-management-architecture.mermaid  risk-notification-integration-flow.mermaid  risk-notification-overview.mermaid  strategy-execution-flow.mermaid
docs/fixes/: disable-dry-run-database-save.md  disable-dry-run-notifications.md  ticket-bigint-fix.md
docs/guides/: cli-reference.md  coding-standards.md  dashboard-guide.md  deployment-guide.md  dry-run-guide.md  intraday-execution-guide.md  multi-account-guide.md  multi-timeframe-guide.md  strategy-guide.md  troubleshooting-guide.md
docs/implementation-logs/: week16.1-trading-accounts-implementation.md  week16.2-account-sync-service-implementation.md
docs/integration/: mt5-connection-guide.md
docs/planning/: roadmap.md  week17-19-brainstorm.md
docs/reference/: api-reference.md  technical-architecture.md
docs/setup/: asset-configuration-guide.md  broker-symbol-mapping-guide.md  configuration-guide.md  market-hours-guide.md  mt5-connection-guide.md  windows-setup-guide.md
docs/todos/: intraday-refactoring-todolist.md
docs/trading/: notifications-guide.md  position-management-architecture.md  risk-management-guide.md  technical-indicators-guide.md  trading-types-guide.md
scripts/: analyze_recent_losses.py  analyze_trading_performance.py  analyze_xauusd_failures.py  backtest_current_system.py  backtest_with_fixes.py  check_xauusd_zones.py  compare_backtest_results.py  create_databases.py  debug_market_data.py  diag_mt5_path.py  download_data.py  dummy_data.txt  generate_test_data.py  kill_trading_bot.py  run_backtest.py  run_mtf_backtest.py  safe_live_test.py  setup_db_manual.py  setup_environment.py  setup_postgresql.py  simple_migration.py  test_lot_size_calculation.py  verify_xagusd_specs.py
scripts/debug/: debug_zone_detection.py
scripts/reports/: backtest_comparison_report.txt
specs/: README.md
specs/active/: docs-cli-gap-fix.md  refactor-codebase.md  strategy-tuning.md
src/trading_bot/: __init__.py  cli.py  config.py  main.py
tests/: __init__.py
tests/api/: test_account_sessions.py  test_aggregations.py  test_analytics_rejections.py  test_api.py  test_auth.py
tests/integration/: test_database_integration.py  test_intraday_executor.py  test_mt5_integration.py  test_mtf_pipeline.py  test_position_sync.py  test_position_sync_automation.py  test_position_sync_new_position.py  (+1 more)
(+220 files in other folders)
